# retrocast

./: .gitignore  .pre-commit-config.yaml  ABOUT.md  AGENTS.md  ARIA2_FETCHER.md  CHANGELOG.md  README.md  TRANSCRIPTION.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: lint.yml  release.yml
demos/: changelog.py
docs/: CASTCHAT.md  TRANSCRIPTION.md  TRANSCRIPTION_DEVELOPER.md
docs/cli/: README.md  about.md  castchat.md  chat.md  config.md  configure.md  download.md  index.md  meta.md  query.md  sql.md  subscribe.md  sync.md  transcribe.md  transcription.md
features/: application_dir.md
overcast_to_sqlite/: cli.py
plans/: 2025-12-16-transcription-implementation-plan.md  2025-12-19-db-initialization-plan.md  2025-12-24-location-json-options.md  2026-01-25-004413-transcription-json-indexing.md  2026-02-12-automated-cli-docs-implementation.md  2026-02-12-automated-cli-docs.md  2026-02-16-205506-command-reorg-implementation-summary.md  20260212_automated_cli_docs.md  PHASE4_COMPLETION.md  PHASE6_COMPLETION.md  PHASE8_COMPLETION.md  PHASE9_COMPLETION.md  add-quiet-flag-plan.md  castchat.md  development-plan-20251201.md  episodes_database.md  episodes_database_implementation_plan.md  implement-transcription.md  mount-podcast-archiver-plan.md  pluggable_indexer.md  pluggable_indexer_codex_review.md  pluggable_indexer_implementation.md  pluggable_indexer_sonnet_review.md  reset-db-implementation-2025-12-20-005116.md
scripts/: README.md  check_types.py
src/retrocast/: ABOUT.md  about_content.py  appdir.py  aria_downloader.py  ariafetcher.py  castchat_agent.py  chapters_backfill.py  chromadb_manager.py  cli.py  crawl_commands.py  datastore.py  doc_utils.py  download_commands.py  episode.py  episode_db_commands.py  episode_scanner.py  feed.py  index_commands.py  logging_config.py  more_itertools.py  overcast.py  podcast_archiver_attach.py  process_commands.py  sql_cli.py  utils.py
src/retrocast/html/: page.py
src/retrocast/transcription/: __init__.py  base.py  models.py  output_formats.py  transcription_manager.py  utils.py
src/retrocast/transcription/backends/: __init__.py  faster_whisper.py  mlx_whisper.py
tests/: PYTEST_WARNING_FILTERS.md  test_castchat.py  test_cli.py  test_cli_quiet_flag.py  test_docs_generation.py  test_feed.py  test_podcast_archiver_attach.py  test_poe_tasks.py  test_process_commands.py  test_reset_db.py  test_sql_cli_podcast_archiver_attach.py  test_transcription.py  test_transcription_models.py  test_transcription_models_integration.py  test_transcription_validate.py
