[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
packages = ["retrocast", "retrocast.html"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["retrocast", "retrocast.html"]

[tool.setuptools.package-data]
"retrocast" = ["ABOUT.md"]
"retrocast.html" = ["*.css", "*.html", "*.js"]

[project]
name = "retrocast"
version = "0.9.0"
description = "AI driven exploration of archived podcast content"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Brian M. Dennis", email = "bmdphd@bmdphd.info" },
    { name = "Harold Martin", email = "Harold.Martin@gmail.com" },
]
keywords = ["datasette", "overcast", "sqlite", "podcasts", "podcast", "transcripts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Datasette",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
 "click",
 "click-default-group",
 "loguru",
 "loguru-config",
 "platformdirs",
 "podcast-chapter-tools",
 "python-dateutil",
 "requests",
 "rich",
 "sqlite-utils",
 "types-click-default-group>=1.2.0.20250513",
 "stamina>=25.1.0",
]

[project.optional-dependencies]
lint = [
    "pyroma",
    "mypy",
    "ruff",
    "types-python-dateutil",
    "types-requests",
    "pytest",
    "requests-mock",
    "pandas-stubs>=2.3.2.250926",
    "types-pygments>=2.19.0.20250809",
]

[project.scripts]
retrocast = "retrocast.cli:cli"

[project.urls]
Homepage = "https://github.com/crossjam/retrocast"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.0",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=8.3.4",
    "ruff>=0.11.13",
    "types-pygments>=2.19.0.20250809",
    "types-python-dateutil>=2.9.0.20250516",
    "types-requests>=2.32.4.20250611",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

# Same as Black, but wider lines
line-length = 100
indent-width = 4
target-version = "py311"

lint.select = [
   "E", # Pycodestyle errors
   "F", # Pyflakes
   "I", # Import order
   "C", # Pylint convention messages
   "R", # Pylint refactor messages
   "W", # Pylint warning messages
]

lint.ignore = ["D100", "D101", "D102", "D103", "D104",
	       "D105", "D107", "D203", "D213",
	       "ICN001", "S608", "S113", "S311", "S314", "T201"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.uv.sources]
loguru-config = { path = "vendor/loguru-config" }

