[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
packages = ["retrocast", "retrocast.html"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["retrocast", "retrocast.html"]

[tool.setuptools.package-data]
"retrocast" = ["ABOUT.md"]
"retrocast.html" = ["*.css", "*.html", "*.js"]

[project]
name = "retrocast"
version = "0.9.0"
description = "AI driven exploration of archived podcast content"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Brian M. Dennis", email = "bmdphd@bmdphd.info" },
    { name = "Harold Martin", email = "Harold.Martin@gmail.com" },
]
keywords = ["datasette", "overcast", "sqlite", "podcasts", "podcast", "transcripts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Datasette",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
 "click",
 "click-default-group",
 "loguru",
 "loguru-config @ git+https://github.com/crossjam/loguru-config",
 "platformdirs",
 "podcast-chapter-tools",
 "python-dateutil",
 "requests",
 "rich",
 "sqlite-utils",
 "types-click-default-group>=1.2.0.20250513",
 "stamina>=25.1.0",
 "podcast-archiver>=2.3.5",
]

[project.optional-dependencies]
lint = [
    "pyroma",
    "ruff",
    "ty",
    "types-python-dateutil",
    "types-requests",
    "pytest",
    "requests-mock",
    "pandas-stubs>=2.3.2.250926",
    "types-pygments>=2.19.0.20250809",
]

# Transcription backends - installed separately by user based on platform
transcription-mlx = [
    "mlx-whisper>=0.4.0; platform_system=='Darwin'",
]

transcription-cuda = [
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",  # With CUDA support
]

transcription-cpu = [
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",  # CPU-only
]

transcription-diarization = [
    "pyannote.audio>=3.0.0",
]

# Convenience metapackage for all transcription features
transcription-full = [
    "retrocast[transcription-mlx,transcription-cuda,transcription-diarization]",
]

[project.scripts]
retrocast = "retrocast.cli:cli"

[project.urls]
Homepage = "https://github.com/crossjam/retrocast"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pandas-stubs>=2.3.2.250926",
    "poethepoet>=0.32.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.13",
    "ty",
    "types-pygments>=2.19.0.20250809",
    "types-python-dateutil>=2.9.0.20250516",
    "types-requests>=2.32.4.20250611",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

# Same as Black, but wider lines
line-length = 100
indent-width = 4
target-version = "py311"

lint.select = [
   "E", # Pycodestyle errors
   "F", # Pyflakes
   "I", # Import order
   "C", # Pylint convention messages
   "R", # Pylint refactor messages
   "W", # Pylint warning messages
]

lint.ignore = ["D100", "D101", "D102", "D103", "D104",
	       "D105", "D107", "D203", "D213",
	       "ICN001", "S608", "S113", "S311", "S314", "T201"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
# Filter deprecation warnings from rich-click's internal code
# These warnings are from rich-click's own CLI command, not our code
filterwarnings = [
    "ignore:`use_markdown=` will be deprecated:PendingDeprecationWarning:rich_click",
    "ignore:`use_rich_markup=` will be deprecated:PendingDeprecationWarning:rich_click",
    "ignore:`use_markdown_emoji=` will be deprecated:PendingDeprecationWarning:rich_click",
]

[tool.poe.tasks]
# Linting
[tool.poe.tasks.lint]
help = "Run ruff linter on source and test files"
cmd = "ruff check src/ tests/"

[tool.poe.tasks."lint:fix"]
help = "Run ruff linter and auto-fix issues"
cmd = "ruff check --fix src/ tests/"

# Type checking
[tool.poe.tasks.type]
help = "Run ty type checker on source files"
cmd = "ty check src/"

# Testing
[tool.poe.tasks.test]
help = "Run pytest with verbose output"
cmd = "pytest -v"

[tool.poe.tasks."test:cov"]
help = "Run pytest with coverage report (terminal + HTML)"
cmd = "pytest --cov=retrocast --cov-report=term-missing --cov-report=html"

[tool.poe.tasks."test:quick"]
help = "Run pytest and stop on first failure"
cmd = "pytest -x"

[tool.poe.tasks."test:collect"]
help = "Collect tests without running them (dry-run)"
cmd = "pytest --collect-only -q"

# Combined QA - run all checks
[tool.poe.tasks.qa]
help = "Run all QA checks (lint, type, test)"
sequence = ["lint", "type", "test"]
ignore_fail = false

# Transcription backend installation
[tool.poe.tasks."install:transcription-mlx"]
help = "Install MLX Whisper backend for Apple Silicon (macOS only)"
cmd = "uv sync --extra transcription-mlx"

[tool.poe.tasks."install:transcription-cuda"]
help = "Install faster-whisper with CUDA support (Linux with NVIDIA GPU)"
cmd = "uv sync --extra transcription-cuda"

[tool.poe.tasks."install:transcription-cpu"]
help = "Install faster-whisper for CPU-only (any platform)"
cmd = "uv sync --extra transcription-cpu"

[tool.uv.sources]
loguru-config = { git = "https://github.com/crossjam/loguru-config" }
